# whatsthat

./: .gitignore  README.md  sample.env  vision-to-audio-documentation.md
backend/: .gitignore  main.py  main22.py  main_copy.py  pyproject.toml  requirements.txt
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  Layout.jsx  index.css  main.jsx
frontend/src/components/: AudioFeedback.jsx  Demo.jsx  Demo_copy.jsx  Footer.jsx  Header.jsx  VideoCapture.jsx  VideoCapture_copy.jsx  captureImg.jsx
frontend/src/home/: Layout.jsx  Search.jsx  captureImg.jsx
v2/: Readme.md
v2/backend22/: .gitignore  main.py  pyproject.toml  requirements.txt  startup.sh
v2/frontend/: package-lock.json  package.json
v2/frontend/src/: App.js  index.js
