[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deep-sort-realtime>=1.3.2",
    "fastapi>=0.115.12",
    "opencv-python>=4.11.0.86",
    "setuptools>=79.0.0",
    "ultralytics>=8.3.114",
    "uvicorn>=0.34.2",
]
