[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deep-sort-realtime>=1.3.2",
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "langchain>=0.3.24",
    "langchain-groq>=0.3.2",
    "numpy>=2.1.1",
    "opencv-python>=4.11.0.86",
    "opencv-python-headless>=4.11.0.86",
    "python-multipart>=0.0.20",
    "setuptools>=79.0.0",
    "sse-starlette>=2.3.3",
    "ultralytics>=8.3.114",
    "uvicorn[standard]>=0.34.2",
]
